--- a/editProfile.html
+++ b/editProfile.html
@@ -64,7 +64,7 @@
               <span class="label label-success">1</span>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">Você tem 1 nova mensagem</li>
+              <li class="header text-center"><b>Conversas</b></li>
               <li>
                 <!-- inner menu: contains the actual data -->
                 <ul class="menu">
@@ -93,12 +93,12 @@
               <span class="label label-warning">1</span>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">Você tem 1 nova solicitação de amizade</li>
+              <li class="header text-center"><b>Solicitações de amizade</b></li>
               <li>
                 <!-- inner menu: contains the actual data -->
                 <ul class="menu">
                   <li><!-- start message -->
-                    <a href="chat.html">
+                    <a>
                       <div class="pull-left">
                         <img src="img/rafael.jpg" class="img-circle" alt="User Image">
                       </div>
@@ -136,7 +136,7 @@
               </li>
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Perfil</a>
+                  <a href="#" class="btn btn-default btn-flat">Editar perfil</a>
                 </div>
                 <div class="pull-right">
                   <a href="login.html" class="btn btn-default btn-flat">Encerrar sessão</a>
@@ -146,8 +146,17 @@
           </li>
           <!-- Control Sidebar Toggle Button -->
           <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-          </li>
+            <li class="dropdown messages-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-gears"></i>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="header text-center"><b>Configurações</b></li>
+                <li class="text-center"><a href="#">Notificações</a></li>
+                <li class="text-center"><a href="#">Usuários bloqueados</a></li>
+                <li class="text-center"><a href="#">Privacidade</a></li>
+              <li class="footer"><a href="#">Ver tudo</a></li>
+            </ul>
         </ul>
       </div>
     </nav>
