--- a/chat.html
+++ b/chat.html
@@ -136,7 +136,7 @@
               </li>
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Editar perfil</a>
+                  <a href="editProfile.html" class="btn btn-default btn-flat">Editar perfil</a>
                 </div>
                 <div class="pull-right">
                   <a href="login.html" class="btn btn-default btn-flat">Encerrar sessão</a>
@@ -172,6 +172,18 @@
         </div>
         <div class="pull-left info">
           <p>Danilo Viana</p>
+            <div class="btn-group">
+			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			    Action <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu">
+			    <li><a href="#">Action</a></li>
+			    <li><a href="#">Another action</a></li>
+			    <li><a href="#">Something else here</a></li>
+			    <li role="separator" class="divider"></li>
+			    <li><a href="#">Separated link</a></li>
+			  </ul>
+			</div>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
