--- a/inicio.html
+++ b/inicio.html
@@ -136,7 +136,7 @@
               </li>
               <li class="user-footer">
                 <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Editar perfil</a>
+                  <a href="editProfile.html" class="btn btn-default btn-flat">Editar perfil</a>
                 </div>
                 <div class="pull-right">
                   <a href="login.html" class="btn btn-default btn-flat">Encerrar sessão</a>
