--- a/inicio.html
+++ b/inicio.html
@@ -41,7 +41,7 @@
     <!-- Logo -->
     <a href="inicio.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>LT</span>
+      <span class="logo-mini"><b>M</b></span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg"><b>Messenger</b></span>
     </a>
